# physim

./: .gitmodules  CMakeLists.txt
cmake/: Analyzers.cmake  CatchAddTests.cmake  EnableExtraCompilerWarnings.cmake  Resources.cmake
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
lib/: CMakeLists.txt  linalg.hpp  log.hpp  vis.cpp  vis.hpp
src/physim/: CMakeLists.txt  logging.cpp  physim.cpp
src/physim-bin/: CMakeLists.txt  configure.cpp  configure.hpp  exit_code.hpp  logging.cpp  logging.hpp  main.cpp
src/physim-bin/graphics/: colors.cpp  colors.hpp  graphics.cpp  graphics.hpp  gui.cpp  gui.hpp  window.cpp  window.hpp
src/physim-bin/graphics/windows/: base.hpp  demo.cpp  demo.hpp  log.cpp  log.hpp  sysinfo.cpp  sysinfo.hpp
src/physim/include/physim/: linalg.hpp  log.hpp  logging.hpp  physim.hpp
test/: CMakeLists.txt  linalg.cpp
tests/: CMakeLists.txt  linalg.cpp
utilities/: CMakeLists.txt  binary_to_compressed_c.cpp
